crates/cortexcode-code-main/tests/snapshots/replay__print-basic.snap
---
source: crates/cortexcode-code-main/tests/replay.rs
description: "recorded from hoocode a6cd96e7 by harness.py record; never accept cortex output here"
expression: print-basic
---
## exit
0

## stdout
Hello from the mock model. **bold** and `code`.

## stderr


## session 1/1
{"type":"session","version":3,"id":"<id-1>","timestamp":"<masked>","cwd":"<WORK>"}
{"type":"model_change","id":"<id-2>","parentId":null,"timestamp":"<masked>","provider":"mock","modelId":"mock-model"}
{"type":"thinking_level_change","id":"<id-3>","parentId":"<id-2>","timestamp":"<masked>","thinkingLevel":"off"}
{"type":"message","id":"<id-4>","parentId":"<id-3>","timestamp":"<masked>","message":{"role":"user","content":[{"type":"text","text":"say hello"}],"timestamp":"<masked>"}}
{"type":"message","id":"<id-5>","parentId":"<id-4>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"Hello from the mock model. **bold** and `code`."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
